--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,6 @@
     "vtex.store-resources": "0.x",
     "vtex.product-review-interfaces": "1.x",
     "vtex.styleguide": "9.x"
-  }
+  },
+  "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
