--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "vendor": "vtex",
-  "name": "product-summary",
+  "name": "product-potato",
   "version": "2.25.1",
   "title": "Product Summary",
   "description": "Product summary component",
